--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -54,4 +54,25 @@
             app:layout_constraintTop_toBottomOf="@+id/Author"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"/>
+
+    <ToggleButton
+            android:id="@+id/button_favorite"
+            android:layout_width="51dp"
+            android:layout_height="50dp"
+            android:background="@drawable/button_favorite"
+            android:checked="false"
+            android:text=""
+            android:textOff=""
+            android:textOn=""
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/Editorial"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.816"
+            app:layout_constraintVertical_bias="0.123"/>
+
 </android.support.constraint.ConstraintLayout>
