--- a/app/src/main/res/layout/fragment_favorite_books_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_books_list.xml
@@ -1,8 +1,11 @@
-<LinearLayout
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".BookFragment"
+        android:orientation="vertical">
 
 
     <android.support.v7.widget.RecyclerView
@@ -10,4 +13,23 @@
             android:layout_height="match_parent"
             android:id="@+id/books_list"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"/>
-</LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/ButtonCreateBook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="56dp"
+            android:src="@drawable/suma"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.896"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/books_list"
+            app:layout_constraintVertical_bias="1.0"
+            tools:ignore="MissingConstraints" />
+</android.support.constraint.ConstraintLayout>
