--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -11,7 +11,7 @@
             android:src="@mipmap/ic_launcher"
             android:layout_width="145dp"
             android:layout_height="156dp"
-            android:id="@+id/imageView"
+            android:id="@+id/cover"
             android:layout_marginTop="36dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +21,11 @@
 
     <TextView
             android:text="TextView"
-            android:layout_width="145dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/Title"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/cover"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,8 +33,8 @@
 
     <TextView
             android:text="TextView"
-            android:layout_width="142dp"
-            android:layout_height="31dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/Author"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
@@ -45,15 +45,38 @@
 
     <TextView
             android:text="TextView"
-            android:layout_width="140dp"
-            android:layout_height="28dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/Editorial"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/Author"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"/>
+
+    <ScrollView
+            android:id="@+id/ScrollView01"
+            android:layout_width="265dp"
+            android:layout_height="176dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/Editorial"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_favorite"
+            app:layout_constraintVertical_bias="0.701"
+            >
+
+        <TextView
+                android:text="TextView"
+                android:id="@+id/synopsis"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+    </ScrollView>
 
     <ToggleButton
             android:id="@+id/button_favorite"
@@ -72,7 +95,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.816"
-            app:layout_constraintVertical_bias="0.123"/>
+            app:layout_constraintHorizontal_bias="0.889"
+            app:layout_constraintVertical_bias="0.892"/>
 
 </android.support.constraint.ConstraintLayout>
