--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,52 +13,50 @@
             android:id="@+id/Email"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="76dp"
-            android:layout_marginEnd="84dp"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:hint="@string/UserName"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:inputType="textEmailAddress|textVisiblePassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.858"
-            app:layout_constraintStart_toStartOf="parent"
+            android:importantForAutofill="no"
+            android:layout_marginTop="132dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:importantForAutofill="no"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
             android:id="@+id/Password"
             android:layout_width="wrap_content"
-            android:layout_height="37dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="36dp"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:hint="@string/Password"
             android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:autofillHints="no"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/Email"
-            android:autofillHints="no"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
             android:id="@+id/Login"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="56dp"
-            android:layout_marginEnd="148dp"
             android:background="@drawable/rounded_button"
             android:text="@string/Login"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.874"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/Password"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Password"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_google_button"
@@ -66,28 +64,25 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/Login"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/backToRegister"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintVertical_bias="0.564"/>
+            android:layout_marginEnd="8dp"/>
 
     <TextView
             android:id="@+id/backToRegister"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="27dp"
+            android:text="@string/goToRegister"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/goToRegister"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Login"
-            app:layout_constraintVertical_bias="0.267"
-            app:layout_constraintHorizontal_bias="0.498"/>
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintVertical_bias="0.074"/>
 
 </android.support.constraint.ConstraintLayout>
