--- a/app/src/main/res/layout-land/fragment_book.xml
+++ b/app/src/main/res/layout-land/fragment_book.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".BookFragment">
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context=".BookFragment">
 
 
     <ImageView
@@ -14,61 +14,53 @@
             android:id="@+id/cover"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="16dp"
+    />
 
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Title"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/cover"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginTop="52dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cover"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.064"/>
 
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Author"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/Title"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/cover"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.064"/>
 
     <TextView
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Editorial"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/Author"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/cover"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.064"/>
 
     <ScrollView
             android:id="@+id/ScrollView01"
-            android:layout_width="265dp"
-            android:layout_height="176dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/Editorial"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_width="557dp"
+            android:layout_height="104dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/button_favorite"
-            app:layout_constraintVertical_bias="0.337"
-    >
+            app:layout_constraintEnd_toStartOf="@+id/button_favorite" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.935" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/Editorial" app:layout_constraintVertical_bias="1.0">
 
         <TextView
                 android:text="TextView"
@@ -81,7 +73,7 @@
     <ToggleButton
             android:id="@+id/button_favorite"
             android:layout_width="51dp"
-            android:layout_height="50dp"
+            android:layout_height="32dp"
             android:background="@drawable/button_favorite"
             android:checked="false"
             android:text=""
@@ -93,9 +85,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.889"
-            app:layout_constraintVertical_bias="0.892"/>
+            app:layout_constraintVertical_bias="0.873"/>
 
 </android.support.constraint.ConstraintLayout>
