--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -18,7 +18,7 @@
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
-            android:autofillHints=""
+            android:importantForAutofill="no"
             android:hint="@string/PasswordRepeat"
             android:inputType="textPassword"
             android:paddingStart="16dp"
@@ -27,6 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordMain"
             android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             tools:ignore="RtlSymmetry"/>
 
     <EditText
@@ -38,13 +39,15 @@
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:hint="@string/UserName"
+            android:importantForAutofill="no"
             android:inputType="textPersonName"
             android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingStart="16dp"
-            tools:ignore="RtlSymmetry" android:layout_marginTop="172dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.493"/>
+            tools:ignore="RtlSymmetry" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.506"/>
 
     <EditText
             android:id="@+id/passwordMain"
@@ -56,8 +59,10 @@
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:hint="@string/Password"
+            android:importantForAutofill="no"
             android:inputType="textPassword"
             android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,21 +81,8 @@
             android:text="@string/Register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordMain2" />
-
-    <TextView
-            android:id="@+id/alreadyMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/alreadyLogin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registerMain"
-            app:layout_constraintVertical_bias="0.186" />
+            app:layout_constraintTop_toBottomOf="@+id/passwordMain2" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintVertical_bias="0.074"/>
 
 </android.support.constraint.ConstraintLayout>
