--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,8 +3,11 @@
       xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:ignore="MissingDefaultResource">
-    <item android:id="@+id/find"
-          app:showAsAction="ifRoom"
-          android:title="Search"/>
 
+    <item
+            android:id="@+id/search"
+            android:icon="@drawable/ic_search_white_24dp"
+            android:title="Search"
+            app:actionViewClass="android.support.v7.widget.SearchView"
+            app:showAsAction="ifRoom|collapseActionView"/>
 </menu>
