--- a/app/src/main/res/layout/fragment_favorite_books_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_books_list.xml
@@ -8,10 +8,25 @@
         android:orientation="vertical">
 
 
+    <TextView
+            android:text="TextView"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="48dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
+            android:textSize="30sp"/>
+
     <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/books_list"
-            app:layoutManager="android.support.v7.widget.GridLayoutManager"/>
+            app:layoutManager="android.support.v7.widget.GridLayoutManager"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.034"/>
 
 </android.support.constraint.ConstraintLayout>
