--- a/app/src/main/res/layout/template_recycler.xml
+++ b/app/src/main/res/layout/template_recycler.xml
@@ -15,14 +15,14 @@
 
         <ImageView
                 android:id="@+id/bookCover"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_width="180dp"
+                android:layout_height="200dp"
                 android:scaleType="centerCrop"/>
 
         <TextView
                 android:id="@+id/bookTitle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp"/>
