--- a/app/src/main/res/layout/template_recycler.xml
+++ b/app/src/main/res/layout/template_recycler.xml
@@ -15,17 +15,17 @@
 
         <ImageView
                 android:id="@+id/bookCover"
-                android:layout_width="180dp"
-                android:layout_height="200dp"
+                android:layout_width="150dp"
+                android:layout_height="160dp"
                 android:scaleType="centerCrop"/>
 
         <TextView
                 android:id="@+id/bookTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="90dp"
                 android:layout_margin="10dp"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20dp"/>
+                android:textSize="20sp"/>
 
 
     </LinearLayout>
