--- a/app/src/main/res/values-sw500dp/values.xml
+++ b/app/src/main/res/values-sw500dp/values.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="large">false</bool>
+    <bool name="large">true</bool>
     <bool name="portrait">true</bool>
 </resources>
