--- a/app/src/main/res/layout/template_recycler.xml
+++ b/app/src/main/res/layout/template_recycler.xml
@@ -15,8 +15,8 @@
 
         <ImageView
                 android:id="@+id/bookCover"
-                android:layout_width="150dp"
-                android:layout_height="160dp"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
                 android:scaleType="centerCrop"/>
 
         <TextView
