--- a/app/src/main/res/layout/fragment_favorite_books_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_books_list.xml
@@ -19,8 +19,8 @@
             android:textSize="30sp"/>
 
     <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/books_list"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
