--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -12,9 +12,8 @@
     <EditText
             android:id="@+id/passwordMain2"
             android:layout_width="317dp"
-            android:layout_height="47dp"
+            android:layout_height="40dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
@@ -23,12 +22,12 @@
             android:inputType="textPassword"
             android:paddingStart="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordMain"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
-            tools:ignore="RtlSymmetry"/>
+            tools:ignore="RtlSymmetry" android:layout_marginTop="8dp"/>
 
     <EditText
             android:id="@+id/nameMain"
@@ -46,12 +45,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingStart="16dp"
-            tools:ignore="RtlSymmetry" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.506"/>
+            tools:ignore="RtlSymmetry" android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"/>
 
     <EditText
             android:id="@+id/passwordMain"
-            android:layout_width="317dp"
+            android:layout_width="314dp"
             android:layout_height="47dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
@@ -64,7 +63,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintHorizontal_bias="0.488"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameMain"
             android:paddingStart="16dp"
