--- a/app/src/main/res/layout/fragment_favorite_books_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_books_list.xml
@@ -1,4 +1,4 @@
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -10,17 +10,18 @@
 
     <TextView
             android:text="TextView"
+            android:textAlignment="center"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="130dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
-            android:textSize="30sp"/>
+            android:textSize="30sp" android:layout_marginBottom="30dp"/>
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/books_list"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
@@ -29,4 +30,4 @@
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.034"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
