--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -58,31 +58,18 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-    <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_google_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/Login"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
-
     <TextView
             android:id="@+id/backToRegister"
             android:layout_width="wrap_content"
             android:layout_height="27dp"
             android:text="@string/goToRegister"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="388dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintVertical_bias="0.074"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/Login"/>
 
 </android.support.constraint.ConstraintLayout>
