--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -11,75 +11,75 @@
     <EditText
             android:id="@+id/Email"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="@dimen/FragmentLoginEmailLH"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:hint="@string/UserName"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:paddingStart="@dimen/Simple16DP"
+            android:paddingEnd="@dimen/Simple16DP"
             android:inputType="textEmailAddress|textVisiblePassword"
             android:importantForAutofill="no"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="@dimen/FragmentRegisternameMainLH"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/Simple8DP"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/Simple8DP"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <EditText
                 android:id="@+id/Password"
                 android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:layout_height="@dimen/FragmentLoginEmailLH"
                 android:background="@drawable/rounded_edittext_register_main"
                 android:ems="10"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
+                android:paddingStart="@dimen/Simple16DP"
+                android:paddingEnd="@dimen/Simple16DP"
                 android:hint="@string/Password"
                 android:inputType="textPassword"
                 android:autofillHints="no"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/Simple8DP"
                 app:layout_constraintTop_toBottomOf="@+id/Email"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/Simple8DP"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/Simple8DP"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <Button
                 android:id="@+id/Login"
-                android:layout_width="90dp"
+                android:layout_width="@dimen/FragmentLoginButtonLW"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_button"
                 android:text="@string/Login"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/Simple8DP"
                 app:layout_constraintTop_toBottomOf="@+id/Password"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/Simple8DP"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/Simple8DP"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
         <com.google.android.gms.common.SignInButton
                 android:id="@+id/sign_in_google_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/Simple8DP"
                 app:layout_constraintTop_toBottomOf="@+id/Login"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/Simple8DP"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="@dimen/Simple8DP"/>
 
         <TextView
                 android:id="@+id/backToRegister"
                 android:layout_width="wrap_content"
-                android:layout_height="27dp"
+                android:layout_height="@dimen/FragmentLoginbackToRegisterLH"
                 android:text="@string/goToRegister"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/Simple8DP"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/Simple8DP"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="@dimen/Simple8DP"
+                android:layout_marginBottom="@dimen/Simple8DP"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintVertical_bias="0.074"/>
