--- a/app/src/main/res/layout-land/fragment_register.xml
+++ b/app/src/main/res/layout-land/fragment_register.xml
@@ -11,77 +11,77 @@
 
     <EditText
             android:id="@+id/passwordMain2"
-            android:layout_width="317dp"
-            android:layout_height="47dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="@dimen/FragmentRegisternameMainLW"
+            android:layout_height="@dimen/FragmentRegisterpasswordMainLH"
+            android:layout_marginStart="@dimen/Simple8DP"
+            android:layout_marginTop="@dimen/Simple8DP"
+            android:layout_marginEnd="@dimen/Simple8DP"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:importantForAutofill="no"
             android:hint="@string/PasswordRepeat"
             android:inputType="textPassword"
-            android:paddingStart="16dp"
+            android:paddingStart="@dimen/Simple16DP"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.509"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passwordMain"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="@dimen/Simple16DP"
+            android:paddingRight="@dimen/Simple16DP"
             tools:ignore="RtlSymmetry"/>
 
     <EditText
             android:id="@+id/nameMain"
-            android:layout_width="314dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_width="@dimen/FragmentRegisternameMainLW"
+            android:layout_height="@dimen/FragmentRegisternameMainLH"
+            android:layout_marginStart="@dimen/Simple8DP"
+            android:layout_marginEnd="@dimen/Simple8DP"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:hint="@string/UserName"
             android:importantForAutofill="no"
             android:inputType="textPersonName"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="@dimen/Simple16DP"
+            android:paddingRight="@dimen/Simple16DP"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:paddingStart="16dp"
+            android:paddingStart="@dimen/Simple16DP"
             tools:ignore="RtlSymmetry" android:layout_marginTop="36dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.506"/>
 
     <EditText
             android:id="@+id/passwordMain"
-            android:layout_width="317dp"
-            android:layout_height="47dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/FragmentRegisternameMainLW"
+            android:layout_height="@dimen/FragmentRegisterpasswordMainLH"
+            android:layout_marginStart="@dimen/Simple8DP"
+            android:layout_marginTop="@dimen/Simple8DP"
             android:layout_marginEnd="8dp"
             android:background="@drawable/rounded_edittext_register_main"
             android:ems="10"
             android:hint="@string/Password"
             android:importantForAutofill="no"
             android:inputType="textPassword"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:paddingLeft="@dimen/Simple16DP"
+            android:paddingRight="@dimen/Simple16DP"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameMain"
-            android:paddingStart="16dp"
+            android:paddingStart="@dimen/Simple16DP"
             tools:ignore="RtlSymmetry"/>
 
     <Button
             android:id="@+id/registerMain"
-            android:layout_width="324dp"
+            android:layout_width="@dimen/FragmentRegisternameMainLW"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/Simple8DP"
+            android:layout_marginTop="@dimen/Simple8DP"
+            android:layout_marginEnd="@dimen/Simple8DP"
             android:background="@drawable/rounded_button"
             android:text="@string/Register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordMain2" android:layout_marginBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/passwordMain2" android:layout_marginBottom="@dimen/Simple8DP"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintVertical_bias="0.074"/>
 
