--- a/app/src/main/res/layout-v26/fragment_register.xml
+++ b/app/src/main/res/layout-v26/fragment_register.xml
@@ -46,7 +46,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingStart="@dimen/Simple16DP"
-            tools:ignore="RtlSymmetry" android:layout_marginTop="@dimen/FragmentRegisternameMainMT" app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="RtlSymmetry"
+            android:layout_marginTop="@dimen/FragmentRegisternameMainMT"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.493"/>
 
     <EditText
@@ -81,8 +83,10 @@
             android:text="@string/Register"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/passwordMain2" android:layout_marginBottom="@dimen/Simple8DP"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.563"
+            app:layout_constraintTop_toBottomOf="@+id/passwordMain2"
+            android:layout_marginBottom="@dimen/Simple8DP"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.563"
             app:layout_constraintVertical_bias="0.043"/>
 
 </android.support.constraint.ConstraintLayout>
