--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,17 +8,17 @@
     <ProgressBar
             android:id="@+id/books_progressBar"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="200dp"/>
+            android:layout_height="@dimen/FragmentTemplateRecyclerImageViewLH"
+            android:layout_marginTop="@dimen/FragmentSearchMT"/>
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/searched_books_list"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/Simple8DP"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/Simple8DP" android:layout_marginBottom="@dimen/Simple8DP"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="@dimen/Simple8DP"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.034"/>
 
