--- a/app/src/main/res/layout-land/template_recycler.xml
+++ b/app/src/main/res/layout-land/template_recycler.xml
@@ -4,9 +4,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="10dp">
+        android:layout_margin="@dimen/FragmentTemplateRecyclercARDeLEVATION"
+        app:cardCornerRadius="@dimen/Simple8DP"
+        app:cardElevation="@dimen/FragmentTemplateRecyclercARDeLEVATION">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -15,17 +15,17 @@
 
         <ImageView
                 android:id="@+id/bookCover"
-                android:layout_width="500dp"
-                android:layout_height="100dp"
+                android:layout_width="@dimen/FragmentTemplateRecyclerImageViewLW"
+                android:layout_height="@dimen/FragmentTemplateRecyclerImageViewLH"
                 android:scaleType="centerCrop"/>
 
         <TextView
                 android:id="@+id/bookTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
+                android:layout_margin="@dimen/FragmentTemplateRecyclercARDeLEVATION"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20dp"/>
+                android:textSize="@dimen/FragmentTemplateRecyclerbookTitleTextSize"/>
 
 
     </LinearLayout>
