--- a/app/src/main/res/layout/fragment_favorite_books_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_books_list.xml
@@ -12,20 +12,25 @@
             android:text="TextView"
             android:textStyle="bold"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="48dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
-            android:textSize="30sp"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/Simple8DP"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/Simple8DP"
+            android:layout_marginTop="@dimen/FragmentRegisterpasswordMainLH"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            android:textSize="@dimen/TextSize30"/>
 
     <android.support.v7.widget.RecyclerView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/books_list"
             app:layoutManager="android.support.v7.widget.GridLayoutManager"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/Simple8DP"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/Simple8DP" android:layout_marginBottom="@dimen/Simple8DP"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="@dimen/Simple8DP"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.034"/>
 
