--- a/app/src/main/res/layout-land/fragment_book.xml
+++ b/app/src/main/res/layout-land/fragment_book.xml
@@ -16,10 +16,10 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
-    />
+            android:contentDescription="@string/todo"/>
 
     <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Title"
@@ -30,7 +30,7 @@
             app:layout_constraintHorizontal_bias="0.064"/>
 
     <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Author"
@@ -41,7 +41,7 @@
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.064"/>
 
     <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Editorial"
@@ -63,7 +63,7 @@
             app:layout_constraintTop_toBottomOf="@+id/Editorial" app:layout_constraintVertical_bias="1.0">
 
         <TextView
-                android:text="TextView"
+                android:text="@string/textview"
                 android:id="@+id/synopsis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
