--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -57,21 +57,20 @@
                 android:layout_marginEnd="@dimen/Simple8DP"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-                android:id="@+id/backToRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/FragmentLoginbackToRegisterLH"
-                android:text="@string/goToRegister"
-                android:layout_marginTop="@dimen/Simple8DP"
-                app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="@dimen/Simple8DP"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="@dimen/Simple8DP"
-                android:layout_marginBottom="@dimen/Simple8DP"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintVertical_bias="0.074"/>
+    <TextView
+            android:id="@+id/backToRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/FragmentLoginbackToRegisterLH"
+            android:text="@string/goToRegister"
+            android:layout_marginTop="@dimen/Simple8DP"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="@dimen/Simple8DP"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/Simple8DP"
+            android:layout_marginBottom="@dimen/Simple8DP"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintVertical_bias="0.074" app:layout_constraintTop_toBottomOf="@+id/Login"/>
 
 
 </android.support.constraint.ConstraintLayout>
