--- a/app/src/main/res/layout/fragment_favorite_books_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_books_list.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:textAlignment="center"
             android:textStyle="bold"
             android:layout_width="wrap_content"
