--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -63,7 +63,6 @@
             android:layout_height="@dimen/FragmentLoginbackToRegisterLH"
             android:text="@string/goToRegister"
             android:layout_marginTop="@dimen/Simple8DP"
-            app:layout_constraintTop_toBottomOf="@+id/sign_in_google_button"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="@dimen/Simple8DP"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +70,6 @@
             android:layout_marginBottom="@dimen/Simple8DP"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/Login"/>
+            app:layout_constraintTop_toBottomOf="@+id/Login"/>
 
 </android.support.constraint.ConstraintLayout>
